--- a/style.scss
+++ b/style.scss
@@ -510,7 +510,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 .global-ai-network-map-fake {
     position: relative;
     width: 100%;
-    max-width: 1070px;
+    max-width: fit-content;
     height: 535px;
     background-color: #a3a3a3;
     border: 2px solid #333;
@@ -553,6 +553,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         box-shadow: 0 0 10px $globalAiNetwork-primary;
         transition: opacity 0.3s;
         z-index: 10;
+        pointer-events: auto;
 
         &.hidden {
             opacity: 0;
@@ -1342,7 +1343,7 @@ $crt-overscan-width: 2.66667em;
     position: relative;
     margin: $crt-margin;
     min-height: 250px;
-    max-width: 700px;
+    max-width: 1100px;
     min-width: 700px;
     box-shadow: inset 0 0 1px 0.66667em #000;
     border-radius: $crt-border-radius;
